feat: all feature done Versin 1.0

--- a/src/index.css
+++ b/src/index.css
@@ -167,3 +167,10 @@ form h2 {
   letter-spacing: -0.5px;
   margin-bottom: 1.6rem;
 }
+
+@media only screen and (max-width: 600px) {
+  .app {
+    display: flex;
+    flex-direction: column;
+  }
+}
